src/render/snapshots/mermaid_cli__render__snapshots__approval_modal_120x40.snap
---
source: src/render/snapshots.rs
expression: frame
---
 > clean the workspace                                                                                                  
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ >                                                                                                                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
┌Approval required — execute_command [destructive]─────────────────────────────────────────────────────────────────────┐
│rm -rf target/                                                                                                        │
│                                                                                                                      │
│  1. Yes                                                                                                              │
│  2. Yes, and don't ask again for `execute_command(rm)`                                                               │
│  3. No (Esc)                                                                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
