src/render/snapshots/mermaid_cli__render__snapshots__approval_modal_80x24.snap
---
source: src/render/snapshots.rs
expression: frame
---
 > clean the workspace                                          Today at 3:04am 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
>                                                                               
────────────────────────────────────────────────────────────────────────────────
┌Approval required — execute_command  [destructive]────────────────────────────┐
│rm -rf target/                                                                │
│                                                                              │
│  1. Yes                                                                      │
│  2. Yes, and don't ask again for `execute_command(rm)`                       │
│  3. No  (Esc)                                                                │
└──────────────────────────────────────────────────────────────────────────────┘
