src/render/snapshots/mermaid_cli__render__snapshots__busy_agents_panel_80x24.snap
---
source: src/render/snapshots.rs
expression: frame
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 > audit the codebase (use agents)                                              
                                                                                
 ◐ Running 3 agents...                                                          
   (esc to interrupt · ctrl+b to background · 45s · ↓ 20.4k tokens)             
   ◦ Map repo structure  read_file… · 45s · ↓ 12.3k tokens                      
   ◦ Audit source architecture  thinking · 45s · ↓ 8.1k tokens                  
   ◦ Audit security & secrets  45s                                              
   ◦ bg Audit docs and conventions  execute_command… · 90s · ↓ 27.9k tokens     
╭──────────────────────────────────────────────────────────────────────────────╮
│ >                                                                            │
╰──────────────────────────────────────────────────────────────────────────────╯
safety: auto · reasoning: medium                                     ollama/test
