src/render/snapshots/mermaid_cli__render__snapshots__busy_streaming_80x24.snap
---
source: src/render/snapshots.rs
expression: frame
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 > explain the plan                                                             
                                                                                
 ● The plan has three phases: first we                                          
                                                                                
 ◐ Streaming... (esc to interrupt · 3s · ↓ 12 tokens)                           
╭──────────────────────────────────────────────────────────────────────────────╮
│ >                                                                            │
╰──────────────────────────────────────────────────────────────────────────────╯
safety: auto · reasoning: medium                                     ollama/test
