src/render/snapshots/mermaid_cli__render__snapshots__busy_tools_with_queue_80x24.snap
---
source: src/render/snapshots.rs
expression: frame
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 > start the server                                                             
                                                                                
 ● Bash(npm run dev)                                                            
                                                                                
 ◐ Running tools... (esc to interrupt · ctrl+b to background · 3s · ↓ 0 tokens) 
 > also check the logs afterwards                                               
╭──────────────────────────────────────────────────────────────────────────────╮
│ >                                                                            │
╰──────────────────────────────────────────────────────────────────────────────╯
safety: auto · reasoning: medium                                     ollama/test
