src/render/snapshots/mermaid_cli__render__snapshots__chat_transcript_120x40.snap
---
source: src/render/snapshots.rs
expression: frame
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
 > run the tests and summarize                                                                                          
                                                                                                                        
 ● All 42 tests pass. The flaky one was fixed by pinning the clock:                                                     
   rust                                                                                                                 
   let now = fixed_now();                                                                                               
   Nothing else changed.                                                                                                
                                                                                                                        
 ● Bash(cargo test)                                                                                                     
   ⎿ took 2.5s                                                                                                          
                                                                                                                        
   Worked for 12s · 1.2k tokens                                                                                         
                                                                                                                        
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ >                                                                                                                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
safety: auto · reasoning: medium                                                                             ollama/test
