src/render/snapshots/mermaid_cli__render__snapshots__conversation_list_120x40.snap
---
source: src/render/snapshots.rs
expression: frame
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>                                                                                                                       
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌Load conversation — ↑↓ navigate · Enter select · Esc cancel───────────────────────────────────────────────────────────┐
│ > Fix the resolver panic  (14 msg · 2026-01-01 12:34)                                                                │
│   Write release notes  (6 msg · 2025-12-31 09:15)                                                                    │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
